/*
 * CHANGELOG.
 */

03222007 - Replaced some Malloc and all the alloca() calls with
           __PHYSFS_smallAlloc(), which will stack allocate small (128 or
           less bytes) blocks and Malloc the rest...naturally these now have
           to be paired with __PHYSFS_smallFree() calls, so you can't be as
           lazy as a basic alloca() would let you be. The benefit is both less
           malloc pressure for those temporary allocations and better stack
           overflow safety (so if some jerk tries to push a 78 megabyte string
           through the library as a filename, we won't try to strcpy it to
           the stack). Hopefully some internal interfaces can now get
           refactored to stop generating heap pointers and let the caller use
           smallAlloc to further reduce malloc pressure.
03212007 - Replaced LONGLONGLITERAL with __PHYSFS_UI64/__PHYSFS_SI64 ...
03202007 - Removed platform/skeleton.c (it was out of date), added
           platform/macosx.c (To further Macify the code and get the #ifdefs
           out of unix.c), and refactored the platform layer to try and
           make the unix/posix/macosx/beos sources try to find a split that
           works. Moved the platform allocators to physfs.c, since all but
           Mac OS X were using malloc()...there's now an interface for the
           platform to supply a custom allocator if they don't want the malloc
           version. Removed __PHYSFS_platformTimeslice(), as it's no longer
           being used. Replaced manual management of pthread mutexes with
           PTHREAD_MUTEX_RECURSIVE attribute...let's see what platforms
           throw up on that. Handled documentation comment FIXME in physfs.h.
03192007 - Fixed two switched strings in CMakeLists.txt ... patch to compile
           with latest Windows Platform SDK. Explicitly check for NULL in
           PHYSFS_init() when we can't go on without a real string here.