@@ -2,6 +2,11 @@
  * CHANGELOG.
  */
 
+03242007 - Replaced BeOS semaphores with BLockers for the mutex implementation.
+           It's much simpler, it has "benaphores" built in behind the scenes
+           for faster performance, and it's recursive...also, we were
+           previously setting the PhysicsFS error state if BeOS mutex grabbing
+           failed (a big no no!), and that's now fixed. Good wins all around.
 03222007 - Replaced some Malloc and all the alloca() calls with
            __PHYSFS_smallAlloc(), which will stack allocate small (128 or
            less bytes) blocks and Malloc the rest...naturally these now have
